Added Login and Sign Up pages with responsive forms and index.html navigation

--- a/enhanced_index.html
+++ b/enhanced_index.html
@@ -417,6 +417,17 @@
     </style>
 </head>
 <body>
+    <div style="text-align: center; margin-top: 100px;">
+  <h1>Welcome to AI Code Detection</h1>
+  <p>Please choose an option:</p>
+  <a href="login.html">
+    <button style="padding: 10px 20px; margin: 10px; background-color: #4f46e5; color: white; border: none; border-radius: 5px;">Login</button>
+  </a>
+  <a href="signup.html">
+    <button style="padding: 10px 20px; margin: 10px; background-color: #10b981; color: white; border: none; border-radius: 5px;">Sign Up</button>
+  </a>
+</div>
+
     <div class="container">
         <div class="header">
             <h1><i class="fas fa-brain"></i> AI Code Detection</h1>
